Alignment issues

--- a/src/WebApps/clr-portal/src/app/app.component.css
+++ b/src/WebApps/clr-portal/src/app/app.component.css
@@ -16,10 +16,10 @@ mat-toolbar{background-color: #03a4ed;}
 
 .content {
   padding: 10px;
-} 
+}
 
 .orgname{
-  color: white; 
+  color: white;
   text-shadow: 0px 0.5px 1px  white;
   padding-left: 10px;
 }
@@ -27,10 +27,10 @@ mat-toolbar{background-color: #03a4ed;}
 .toolbar-content {
   display: flex;
   justify-content: space-between;
-  width: 100%;
   padding-right:15px;
-  image {
-    width:4% !important;
+  padding-left:15px;
+  img {
+    width:7% !important;
   }
 }
 
